Home and Login UI

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,39 +14,105 @@
     </ion-toolbar>
   </ion-header>
 
-  <div class="">
+ <div class="container products">
   <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      <div class="wrapper">
-    <div class="login-box">
-      <div class="login-header">
-        <span>Login</span>
-      </div>
-      <div class="input_box">
-        <input type="text" id="user" class="input-field" required>
-        <label for="user" class="label"><i class="fa fa-user-circle-o pr-2" aria-hidden="true"></i>Username
-        </label>
-      </div>
-      <div class="input_box">
-        <input type="password" id="pass" class="input-field" required oninput="checkPasswordStrength(this.value)">
-        <label for="pass" class="label"><i class="fa fa-lock pr-2" aria-hidden="true"></i>Password</label>
-        <i class="bx bx-lock-alt icon" id="togglePassword"></i>
-      </div>
-      <div id="passwordStrength" class="password-strength"></div>
+    <div class="col-sm-3">
+       <div class="Product-Card">
+            <div class="card-inner">
+                <div class="image-area">
+                    <a href="#">
+                        <img src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
+                            alt="">
+                    </a>
+                </div>
+                <div class="blog-content">
+                    <p class="tag color-two">
+                        <img src="https://cdn-icons-png.flaticon.com/512/13140/13140726.png">
+                        <span>Marriage </span>
+                    </p>
 
-      <div class="input_box">
-        <input type="submit" class="input-submit" value="Login" onclick="handleLogin()">
-      </div>
-      
+                </div>
+            </div>
+            <a href="#" class="blog-btn rounded-button bg-two">
+                <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 17L17 1H7.8" stroke="white"></path>
+                </svg>
+            </a>
+        </div>
     </div>
+    <div class="col-sm-3">
+       <div class="Product-Card">
+            <div class="card-inner">
+                <div class="image-area">
+                    <a href="#">
+                        <img src="https://img.freepik.com/free-psd/3d-blue-pink-gender-reveal-podium-with-toys_23-2150816968.jpg?semt=ais_hybrid&w=740"
+                            alt="">
+                    </a>
+                </div>
+                <div class="blog-content">
+                    <p class="tag color-two">
+                        <img src="https://icon-library.com/images/baby-shower-icon/baby-shower-icon-0.jpg">
+                        <span>Baby Shower </span>
+                    </p>
 
-  </div>
+                </div>
+            </div>
+            <a href="#" class="blog-btn rounded-button bg-two">
+                <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 17L17 1H7.8" stroke="white"></path>
+                </svg>
+            </a>
+        </div>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-sm-3">
+       <div class="Product-Card">
+            <div class="card-inner">
+                <div class="image-area">
+                    <a href="#">
+                        <img src="https://img.freepik.com/premium-photo/engaged-couple-with-rings_908985-39841.jpg"
+                            alt="">
+                    </a>
+                </div>
+                <div class="blog-content">
+                    <p class="tag color-two">
+                        <img src="https://cdn-icons-png.flaticon.com/512/13140/13140726.png">
+                        <span>Engagement </span>
+                    </p>
+
+                </div>
+            </div>
+            <a href="#" class="blog-btn rounded-button bg-two">
+                <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 17L17 1H7.8" stroke="white"></path>
+                </svg>
+            </a>
+        </div>
+    </div>
+    <div class="col-sm-3">
+       <div class="Product-Card">
+            <div class="card-inner">
+                <div class="image-area">
+                    <a href="#">
+                        <img src="https://img.freepik.com/premium-photo/happy-birthday-background-wallpaper-illustration_492154-7372.jpg"
+                            alt="">
+                    </a>
+                </div>
+                <div class="blog-content">
+                    <p class="tag color-two">
+                        <img src="https://www.freeiconspng.com/uploads/birthday-cake-icon-1.png">
+                        <span>Birthday </span>
+                    </p>
+
+                </div>
+            </div>
+            <a href="#" class="blog-btn rounded-button bg-two">
+                <svg width="16" height="15" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 17L17 1H7.8" stroke="white"></path>
+                </svg>
+            </a>
+        </div>
+    </div>
   </div>
-  
-  
 </div>
 
 <div class="bg bg-orange"></div>
