--- a/src/app/components/login/login.page.html
+++ b/src/app/components/login/login.page.html
@@ -1,13 +1,56 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>
+      Blank
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">login</ion-title>
+      <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div class="bg-orange">
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <div class="wrapper">
+    <div class="login-box">
+      <div class="login-header">
+        <!-- <span>Login</span> -->
+        <img src="../../../assets/logo.png">
+      </div>
+      <div class="input_box">
+        <input type="text" id="user" class="input-field" required>
+        <label for="user" class="label"><i class="fa fa-phone-square pr-2" aria-hidden="true"></i>Mobile Number
+        </label>
+      </div>
+      <div class="input_box">
+        <input type="password" id="pass" class="input-field" required oninput="checkPasswordStrength(this.value)">
+        <label for="pass" class="label"><i class="fa fa-lock pr-2" aria-hidden="true"></i>Verify OTP</label>
+        <i class="bx bx-lock-alt icon" id="togglePassword"></i>
+      </div>
+      <div id="passwordStrength" class="password-strength"></div>
+
+      <div class="input_box">
+        <input type="submit" class="input-submit" value="Login" onclick="handleLogin()">
+      </div>
+      
+    </div>
+
+  </div>
+    </div>
+    <div class="col-md-4"></div>
+  </div>
+  
+  
+</div>
+
+<div class="bg bg-orange"></div>
+
+
 </ion-content>
