--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,282 +1,6 @@
-/* POPPINS FONT */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
-* {
-  margin: 0;
-
-  padding: 0;
-
-  box-sizing: border-box;
-
-   font-family: "Noto Sans", sans-serif;
+.products{
+  padding: 40px 0;
 }
-.pr-2{
-  padding-right: 5px;
-}
-/* ===== COLOR VARIABLES ===== */
-
-
-
-/* ===== BODY - BACKGROUND IMAGE ===== */
-
-body {
-  background: #9a90f5;
-}
-
-/* ===== Reusable CSS ===== */
-
-a {
-  text-decoration: none;
-  color: #ffffff;
-}
-a:hover {
-  text-decoration: underline;
-}
-
-/* ===== WRAPPER ===== */
-
-.wrapper {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  
-}
-
-.login-box {
-  position: relative;
-  width: 450px;
-  border: 3px solid #F77524;
-  border-radius: 15px;
-  padding: 7.5em 2.5em 4em 2.5em;
-  background-color: #ffffff;
-  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3);
-}
-
-.login-header {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #F77524;
-  width: 140px;
-  height: 50px;
-  border-radius: 0 0 20px 20px;
-}
-
-.login-header span {
-  font-size: 25px;
-  color: #fff;
-}
-
-.login-header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -30px;
-  width: 30px;
-  height: 30px;
-  border-top-right-radius: 50%;
-  background: transparent;
-  box-shadow: 15px 0 0 0 #F77524;
-}
-
-.login-header::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: -30px;
-  width: 30px;
-  height: 30px;
-  border-top-left-radius: 50%;
-  background: transparent;
-  box-shadow: -15px 0 0 0 #F77524;
-}
-
-.input_box {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin: 20px 0;
-}
-
-.input-field {
-  width: 100%;
-  height: 40px;
-  font-size: 16px;
-  background: transparent;
-  color: #000000;
-  padding-inline: 20px 50px;
-  border: 2px solid #F77524;
-  border-radius: 30px;
-  outline: none;
-}
-
-#user {
-  margin-bottom: 10px;
-}
-
-.label {
-  position: absolute;
-  top: 12px;
-  left: 20px;
-  transition: 0.2s ease-in-out;
-}
-
-.input-field:focus ~ .label,
-.input-field:valid ~ .label {
-  position: absolute;
-  top: -10px;
-  left: 20px;
-  font-size: 14px;
-  background-color: #F77524;
-  border-radius: 30px;
-  color: #fff;
-  padding: 3px 10px;
-}
-
-.icon {
-  position: absolute;
-  top: 18px;
-  right: 25px;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-.bx-hide {
-  content: "\eb2c"; /* Hide icon */
-}
-
-.bx-show {
-  content: "\eb25"; /* Show icon */
-}
-
-.remember-forgot {
-  display: flex;
-  justify-content: space-between;
-  font-size: 15px;
-}
-
-.input-submit {
-  width: 100%;
-  height: 35px;
-  background: #F77524;
-  font-size: 16px;
-  font-weight: 500;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-  transition: 0.3s ease-in-out;
-  color: #fff;
-}
-
-.input-submit:hover {
-  background: #1d0db2;
-}
-
-.register {
-  text-align: center;
-}
-
-.register a {
-  font-weight: 500;
-}
-
-a {
-  color: #F77524;
-}
-
-@media only screen and (max-width: 564px) {
-  .wrapper {
-    padding: 20px;
-  }
-  .login-box {
-    padding: 7.5em 1.5em 4em 2.5em;
-  }
-}
-
-/* For tablets and larger phones */
-@media only screen and (max-width: 1024px) {
-  .wrapper {
-    padding: 10px;
-  }
-  .login-box {
-    width: 80%; /* Adjust width */
-    padding: 5em 1.5em 1em 1.5em; /* Adjust padding */
-  }
-  .modal-content {
-    width: 70%; /* Adjust modal width */
-  }
-}
-
-/* For smaller screens like phones */
-@media only screen and (max-width: 564px) {
-  .wrapper {
-    padding: 15px;
-  }
-  .login-box {
-    padding: 7.5em 1.5em 4em 2.5em;
-  }
-  .modal-content {
-    width: 90%; /* Adjust modal width */
-  }
-  
-    .remember-forgot {
-   font-size: 11px;
-   margin: 0 10px;
-  }
-/* Hide the default checkbox */
-input[type="checkbox"] {
-    width: 11px; /* Set width */
-    height: 11px; /* Set height */
-  }
-}
-
-.error-message {
-  color: red;
-  font-size: 12px;
-  margin-top: 5px;
-}
-
-/* Modal styles */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
 
 .bg{
   position: absolute;
@@ -292,3 +16,110 @@ input[type="checkbox"] {
   background: linear-gradient(to right, #FDDE90, #F77524);
  
 }
+.Product-Card {
+    position: relative;
+    z-index: 1;
+    margin: 15px;
+}
+.Product-Card .card-inner {
+    padding: 20px 20px;
+    background: #ececec;
+    clip-path: polygon(0% 9.276%, 0% 9.276%, 0.157% 7.772%, 0.613% 6.344%, 1.342% 5.013%, 2.319% 3.798%, 3.52% 2.717%, 4.921% 1.79%, 6.496% 1.035%, 8.22% 0.473%, 10.07% 0.121%, 12.019% 0%, 87.981% 0%, 87.981% 0%, 89.93% 0.121%, 91.78% 0.473%, 93.504% 1.035%, 95.079% 1.79%, 96.48% 2.717%, 97.681% 3.798%, 98.658% 5.013%, 99.387% 6.344%, 99.843% 7.772%, 100% 9.276%, 100% 82.629%, 100% 82.629%, 99.99% 82.925%, 99.959% 83.219%, 99.909% 83.511%, 99.839% 83.799%, 99.749% 84.085%, 99.64% 84.366%, 99.512% 84.643%, 99.364% 84.914%, 99.198% 85.18%, 99.014% 85.439%, 90.069% 97.244%, 90.069% 97.244%, 89.65% 97.736%, 89.171% 98.186%, 88.638% 98.592%, 88.057% 98.951%, 87.432% 99.262%, 86.77% 99.521%, 86.074% 99.727%, 85.351% 99.877%, 84.606% 99.969%, 83.844% 100%, 12.019% 100%, 12.019% 100%, 10.07% 99.879%, 8.22% 99.527%, 6.496% 98.965%, 4.921% 98.21%, 3.52% 97.283%, 2.319% 96.202%, 1.342% 94.987%, 0.613% 93.656%, 0.157% 92.228%, 0% 90.724%, 0% 9.276%);
+}
+.Product-Card .card-inner .image-area {
+    overflow: hidden;
+    border-radius: 20px;
+}
+.Product-Card .card-inner .image-area::before {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 2;
+    display: block;
+    content: "";
+    width: 0;
+    height: 0;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    opacity: 0;
+}
+.Product-Card:hover .card-inner .image-area::before {
+    -webkit-animation: circle 0.75s;
+    animation: circle 0.95s;
+}
+.Product-Card .card-inner .image-area a {
+    transition: all 0.5s ease;
+}
+.Product-Card:hover .card-inner .image-area a img {
+    transform: scale(110%);
+}
+.Product-Card .card-inner .image-area a img {
+    transform: scale(100%);
+    transition: all 0.5s ease;
+}
+.Product-Card .card-inner .blog-content {
+    margin-top: 30px;
+}
+.Product-Card .card-inner .blog-content .tag {
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 500;
+    padding: 9px 22px 7px;
+    border: 1px solid #ff4438;
+    max-width: max-content;
+    border-radius: 100px;
+    color: #ff4438;
+    font-size: 14px;
+    font-weight: 700;
+    margin: 0 auto;
+}
+.Product-Card .card-inner .blog-content .tag img{
+  width: 18px;
+  height: 18px;
+}
+.Product-Card .card-inner .blog-content .title {
+    text-transform: capitalize;
+}
+.Product-Card .blog-btn {
+    width: 50px;
+    height: 50px;
+    line-height: 65px;
+    border: 5px solid #fff;
+    background-image: linear-gradient(to right, #ff4438 0%, #ffbe36 50%, #ff4438 100%);
+    background-size: 200% auto;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -5px;
+    right: -5px;
+    z-index: 1;
+    text-align: center;
+    display: flex;
+    transition: all 0.5s ease;
+    transform: scale(100%);
+    align-items: center;
+    justify-content: center;
+}
+.Product-Card:hover .blog-btn {
+    transform: rotate(45deg);
+}
+
+
+
+@-webkit-keyframes circle {
+	0% {
+		opacity: 1;
+	}
+	40% {
+		opacity: 1;
+	}
+	100% {
+		width: 200%;
+		height: 200%;
+		opacity: 0;
+	}
+}
+
