--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
     </ion-toolbar>
   </ion-header>
 
- <div class="container products">
+ <div class="container products bg-orange">
   <div class="row">
     <div class="col-sm-3">
        <div class="Product-Card">
