--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
@@ -13,10 +16,61 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
+<section>
+    
+<div class="">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
- <div class="container products bg-orange">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+
+      <div class="item active">
+        <img src="https://i2.wp.com/jashnnsignature.com/wp-content/uploads/2018/10/indian-wedding-wallpaper-1.jpg" alt="Marraige Events" style="width:100%;">
+        <div class="carousel-caption">
+          <h3>Marraige Events</h3>
+          <p>LA is always so much fun!</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="https://i2.wp.com/jashnnsignature.com/wp-content/uploads/2018/10/indian-wedding-wallpaper-1.jpg" alt="Marraige Events" style="width:100%;">
+        <div class="carousel-caption">
+          <h3>Marraige Events</h3>
+          <p>Thank you, Marraige Events!</p>
+        </div>
+      </div>
+    
+      <div class="item">
+        <img src="https://i2.wp.com/jashnnsignature.com/wp-content/uploads/2018/10/indian-wedding-wallpaper-1.jpg" alt="Marraige Events" style="width:100%;">
+        <div class="carousel-caption">
+          <h3>Marraige Events</h3>
+          <p>We love the Big Apple!</p>
+        </div>
+      </div>
+  
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+</section>
+ <div class="products bg-orange">
   <div class="row">
-    <div class="col-sm-3">
+    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
        <div class="Product-Card">
             <div class="card-inner">
                 <div class="image-area">
@@ -40,7 +94,8 @@
             </a>
         </div>
     </div>
-    <div class="col-sm-3">
+    
+    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
        <div class="Product-Card">
             <div class="card-inner">
                 <div class="image-area">
@@ -64,7 +119,7 @@
             </a>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
        <div class="Product-Card">
             <div class="card-inner">
                 <div class="image-area">
@@ -88,7 +143,7 @@
             </a>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
        <div class="Product-Card">
             <div class="card-inner">
                 <div class="image-area">
