--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -123,3 +123,231 @@
 	}
 }
 
+
+
+/** Menu CSS Start **/
+
+
+
+
+.option_item {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.option_item .checkbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0;
+}
+
+.option_item .option_inner {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  border-radius: 12px;
+  text-align: center;
+  padding: 0px;
+  cursor: pointer;
+  color: #585c68;
+  display: block;
+  border: 2px solid transparent;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  position: relative;
+}
+
+
+.option_item .option_inner .icon .fab {
+  font-size: 32px;
+}
+
+.option_item .option_inner .name {
+  user-select: none;
+}
+
+.option_item .checkbox:checked ~ .option_inner.facebook {
+  border-color: #585c68;
+  color: #585c68;
+}
+
+.option_item .option_inner .tickmark {
+  
+    position: absolute;
+    transform: scale(0.6) translate(-50%,-50%);
+    transition: all 300ms ease;
+    right: -16px;
+    top: 6px;
+    z-index: 1;
+  display: none;
+}
+
+.option_item .checkbox:checked ~ .option_inner .tickmark {
+  display: block;
+}
+
+
+
+
+
+/** Chef CSS Start **/
+@media (min-width: 300px) and (max-width: 776px) {
+  
+  .Menu-List .popular-inner-box {
+    padding:20px 35px 20px 0px !important;
+  }
+.option_item .option_inner .tickmark img{
+    width: 40px !important;
+}
+.option_item{
+    padding: 10px;
+    margin: 0 !important;
+}
+.option_item .option_inner .tickmark{
+    top: 5px !important;
+    right: -18px !important;
+}
+.Menu-List .popular-inner-box .popular-inner-item .text h5{
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    display: -webkit-box !important;
+    -webkit-line-clamp: 2 !important;
+    -webkit-box-orient: vertical !important;
+}
+}
+
+
+
+
+.option_item .option_inner .tickmark img{
+    width: 35px;
+}
+.Menu-List {
+  display: flex;
+  gap: 12px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  overflow: hidden;
+ border-radius: 12px;
+ flex-direction: row;
+}
+.Menu-List:hover .Menu-List-img img {
+  transform: scale(1.2);
+}
+.Menu-List:hover .popular-inner-item-btn .main-btn-five {
+  color: #fff;
+}
+.Menu-List:hover .popular-inner-item-btn .main-btn-five::before {
+  transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
+}
+.Menu-List:hover .popular-inner-item-btn .main-btn-five::after {
+  transform: translate3d(0, 0, 0);
+  transition-duration: 0.05s;
+  transition-delay: 0.4s;
+  transition-timing-function: linear;
+}
+.Menu-List:hover .popular-inner-item-btn .main-btn-five span svg {
+  stroke: currentColor;
+  color: #fff;
+  transition: all 0.3s;
+}
+.Menu-List .Menu-List-img {
+  overflow: hidden;
+  border-radius: 12px 0px 0px 12px;
+  position: relative;
+  overflow: hidden;
+  flex: 0 0 50%;
+}
+.Menu-List .Menu-List-img .Menu-List-img-overlay {
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  display: flex;
+  align-items: center;
+  padding: 4px 6px;
+  border-radius: 6px;
+  background: rgba(0, 9, 41, 0.80);
+  z-index: 11;
+}
+.Menu-List .Menu-List-img .Menu-List-img-overlay .icon {
+  line-height: 0;
+}
+.Menu-List .Menu-List-img .Menu-List-img-overlay .text p {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 150%;
+  margin: 0;
+}
+.Menu-List .Menu-List-img::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: -75%;
+  z-index: 2;
+  display: block;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
+  transform: skewX(-25deg);
+  animation: shine 4s linear infinite;
+}
+.Menu-List .Menu-List-img img {
+  transition: all 0.3s ease-out 0s;
+}
+.Menu-List .popular-inner-box {
+  padding: 15px 35px 15px 0px;
+  flex: 0 0 50%;
+}
+.Menu-List .popular-inner-box .Menu-List-text {
+  padding: 0px 0 5px 0;
+}
+.Menu-List .popular-inner-box .Menu-List-text h3 {
+  font-size: 15px;
+  font-weight: 700;
+  text-align: left;
+  margin: 0 0 5px 0;
+}
+.Menu-List .popular-inner-box .popular-inner-item {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 12px;
+}
+.Menu-List .popular-inner-box .popular-inner-item:last-child {
+  margin-bottom: 0;
+}
+.Menu-List .popular-inner-box .popular-inner-item .icon {
+  line-height: 0;
+}
+.Menu-List .popular-inner-box .popular-inner-item .text h5 {
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 150%;
+  margin: 0;
+  text-align: left;
+}
+.popular-item-mt-30px {
+  margin-top: 30px;
+}
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
+ }
+ .title{
+    
+  font-size:20px;
+  color: #ff3643;
+  margin: 0;
+  padding: 0 20px 20px 20px;
+  font-weight: 700;
+  text-transform: capitalize;
+  transition: all ease-in-out 0.3s;
+  display:inline;
+ }
