--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -72,6 +72,7 @@
     </div>
   </section>
   <div class="products bg-orange">
+    <div class="container-fluid">
     <div class="row">
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
         <div class="Product-Card">
@@ -540,6 +541,7 @@
       </div>
     </div>
 </section>
+  </div>
   </div>
 
   <div class="bg bg-orange"></div>
