--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -234,8 +234,8 @@
     width: 40px !important;
 }
 .option_item{
-    padding: 10px;
     margin: 0 !important;
+    margin-bottom: 15px !important;
 }
 .option_item .option_inner .tickmark{
     top: 5px !important;
@@ -264,6 +264,7 @@
   overflow: hidden;
  border-radius: 12px;
  flex-direction: row;
+ align-items: center;
 }
 .Menu-List:hover .Menu-List-img img {
   transform: scale(1.2);
@@ -370,12 +371,11 @@
     left: 125%;
   }
  }
- .title{
-    
+ .title{    
   font-size:20px;
   color: #ff3643;
   margin: 0;
-  padding: 0 20px 20px 20px;
+  padding: 0 20px 20px 0px;
   font-weight: 700;
   text-transform: capitalize;
   transition: all ease-in-out 0.3s;
