--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,15 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+/* POPPINS FONT */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+*,body {
+  margin: 0;
+
+  padding: 0;
+
+  box-sizing: border-box;
+
+   font-family: "Noto Sans", sans-serif;
+}
