--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -289,7 +289,7 @@
 }
 .Menu-List .Menu-List-img {
   overflow: hidden;
-  border-radius: 12px 0px 0px 12px;
+  border-radius: 12px 12px 0px 0px;
   position: relative;
   overflow: hidden;
   flex: 0 0 50%;
@@ -343,6 +343,7 @@
   font-weight: 700;
   text-align: left;
   margin: 0 0 5px 0;
+  color: #ff4438;
 }
 .Menu-List .popular-inner-box .popular-inner-item {
   display: flex;
