--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,20 +2,20 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
       Blank
     </ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
   <section>
 
     <div class="">
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
         <div class="Product-Card">
-          <div class="card-inner">
+          <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
               <a href="#">
                 <img
@@ -102,7 +102,7 @@
 
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
         <div class="Product-Card">
-          <div class="card-inner">
+          <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
               <a href="#">
                 <img
@@ -127,7 +127,7 @@
       </div>
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
         <div class="Product-Card">
-          <div class="card-inner">
+          <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
               <a href="#">
                 <img src="https://img.freepik.com/premium-photo/engaged-couple-with-rings_908985-39841.jpg" alt="">
@@ -150,7 +150,7 @@
       </div>
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
         <div class="Product-Card">
-          <div class="card-inner">
+          <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
               <a href="#">
                 <img
@@ -175,7 +175,7 @@
       </div>
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
         <div class="Product-Card">
-          <div class="card-inner">
+          <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
               <a href="#">
                 <img
@@ -200,7 +200,7 @@
       </div>
       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
         <div class="Product-Card">
-          <div class="card-inner">
+          <div class="card-inner" (click)="gotoevent()">
             <div class="image-area">
               <a href="#">
                 <img
@@ -224,323 +224,7 @@
         </div>
       </div>
     </div>
-<section class="menu-list">
-    <div class="row p-2">
-      <h2 class="title">Select Menu List</h2>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-        <label class="option_item">
-          <input type="checkbox" class="checkbox">
-          <div class="option_inner facebook">
-            <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
-            </div>
-            <div class="Menu-List">
-              <div class="Menu-List-img">
-                <img
-                  src="https://static.vecteezy.com/system/resources/previews/035/824/058/large_2x/ai-generated-japanese-ramen-noodle-with-kimchi-egg-and-vegetables-a-bowl-of-spicy-ramen-with-chopsticks-on-the-side-ai-generated-free-photo.jpg"
-                  alt="thumb">
 
-                <div class="Menu-List-img-overlay">
-                  <div class="icon">
-                    <span>
-                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
-                          fill="#FFB23E"></path>
-                      </svg>
-                    </span>
-                  </div>
-
-                  <div class="text pl-1">
-                    <p>4.7(2.5K)</p>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="popular-inner-box">
-                <div class="Menu-List-text">
-                  <h3>Fish Tacos Chipotle Crema</h3>
-                </div>
-
-                <div class="popular-inner-item">
-                  <div class="text">
-                    <h5>Healthy tacos are possible! Yogurt chipotle crema and pickled onions make this easy Fish Taco
-                      recipe a repeat. All that in 30 minutes!</h5>
-                  </div>
-                </div>
-              </div>
-
-
-            </div>
-          </div>
-        </label>
-
-      </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-        <label class="option_item">
-          <input type="checkbox" class="checkbox">
-          <div class="option_inner facebook">
-            <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
-            </div>
-            <div class="Menu-List">
-              <div class="Menu-List-img">
-                <img
-                  src="https://thumbs.dreamstime.com/b/pulled-pork-barbecue-sandwich-bowl-barbecue-sauce-pulled-pork-barbecue-sandwich-bowl-barbecue-sauce-297951014.jpg"
-                  alt="thumb">
-
-                <div class="Menu-List-img-overlay">
-                  <div class="icon">
-                    <span>
-                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
-                          fill="#FFB23E"></path>
-                      </svg>
-                    </span>
-                  </div>
-
-                  <div class="text pl-1">
-                    <p>4.7(2.5K)</p>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="popular-inner-box">
-                <div class="Menu-List-text">
-                  <h3>Fish Tacos Chipotle Crema</h3>
-                </div>
-
-                <div class="popular-inner-item">
-
-
-                  <div class="text">
-                    <h5>Healthy tacos are possible! Yogurt chipotle crema and pickled onions make this easy Fish Taco
-                      recipe a repeat. All that in 30 minutes!</h5>
-                  </div>
-                </div>
-
-
-              </div>
-
-
-            </div>
-          </div>
-        </label>
-      </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-        <label class="option_item">
-          <input type="checkbox" class="checkbox">
-          <div class="option_inner facebook">
-            <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
-            </div>
-            <div class="Menu-List">
-              <div class="Menu-List-img">
-                <img
-                  src="https://static.vecteezy.com/system/resources/previews/035/824/058/large_2x/ai-generated-japanese-ramen-noodle-with-kimchi-egg-and-vegetables-a-bowl-of-spicy-ramen-with-chopsticks-on-the-side-ai-generated-free-photo.jpg"
-                  alt="thumb">
-
-                <div class="Menu-List-img-overlay">
-                  <div class="icon">
-                    <span>
-                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
-                          fill="#FFB23E"></path>
-                      </svg>
-                    </span>
-                  </div>
-
-                  <div class="text pl-1">
-                    <p>4.7(2.5K)</p>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="popular-inner-box">
-                <div class="Menu-List-text">
-                  <h3>Fish Tacos Chipotle Crema</h3>
-                </div>
-
-                <div class="popular-inner-item">
-                  <div class="text">
-                    <h5>Healthy tacos are possible! Yogurt chipotle crema and pickled onions make this easy Fish Taco
-                      recipe a repeat. All that in 30 minutes!</h5>
-                  </div>
-                </div>
-              </div>
-
-
-            </div>
-          </div>
-        </label>
-
-      </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-        <label class="option_item">
-          <input type="checkbox" class="checkbox">
-          <div class="option_inner facebook">
-            <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
-            </div>
-            <div class="Menu-List">
-              <div class="Menu-List-img">
-                <img
-                  src="https://thumbs.dreamstime.com/b/pulled-pork-barbecue-sandwich-bowl-barbecue-sauce-pulled-pork-barbecue-sandwich-bowl-barbecue-sauce-297951014.jpg"
-                  alt="thumb">
-
-                <div class="Menu-List-img-overlay">
-                  <div class="icon">
-                    <span>
-                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
-                          fill="#FFB23E"></path>
-                      </svg>
-                    </span>
-                  </div>
-
-                  <div class="text pl-1">
-                    <p>4.7(2.5K)</p>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="popular-inner-box">
-                <div class="Menu-List-text">
-                  <h3>Fish Tacos Chipotle Crema</h3>
-                </div>
-
-                <div class="popular-inner-item">
-
-
-                  <div class="text">
-                    <h5>Healthy tacos are possible! Yogurt chipotle crema and pickled onions make this easy Fish Taco
-                      recipe a repeat. All that in 30 minutes!</h5>
-                  </div>
-                </div>
-
-
-              </div>
-
-
-            </div>
-          </div>
-        </label>
-      </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-        <label class="option_item">
-          <input type="checkbox" class="checkbox">
-          <div class="option_inner facebook">
-            <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
-            </div>
-            <div class="Menu-List">
-              <div class="Menu-List-img">
-                <img
-                  src="https://static.vecteezy.com/system/resources/previews/035/824/058/large_2x/ai-generated-japanese-ramen-noodle-with-kimchi-egg-and-vegetables-a-bowl-of-spicy-ramen-with-chopsticks-on-the-side-ai-generated-free-photo.jpg"
-                  alt="thumb">
-
-                <div class="Menu-List-img-overlay">
-                  <div class="icon">
-                    <span>
-                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
-                          fill="#FFB23E"></path>
-                      </svg>
-                    </span>
-                  </div>
-
-                  <div class="text pl-1">
-                    <p>4.7(2.5K)</p>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="popular-inner-box">
-                <div class="Menu-List-text">
-                  <h3>Fish Tacos Chipotle Crema</h3>
-                </div>
-
-                <div class="popular-inner-item">
-                  <div class="text">
-                    <h5>Healthy tacos are possible! Yogurt chipotle crema and pickled onions make this easy Fish Taco
-                      recipe a repeat. All that in 30 minutes!</h5>
-                  </div>
-                </div>
-              </div>
-
-
-            </div>
-          </div>
-        </label>
-
-      </div>
-      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
-        <label class="option_item">
-          <input type="checkbox" class="checkbox">
-          <div class="option_inner facebook">
-            <div class="tickmark">
-              <img src="https://venus-scocu-assets.s3.amazonaws.com/3884028172423400">
-            </div>
-            <div class="Menu-List">
-              <div class="Menu-List-img">
-                <img
-                  src="https://thumbs.dreamstime.com/b/pulled-pork-barbecue-sandwich-bowl-barbecue-sauce-pulled-pork-barbecue-sandwich-bowl-barbecue-sauce-297951014.jpg"
-                  alt="thumb">
-
-                <div class="Menu-List-img-overlay">
-                  <div class="icon">
-                    <span>
-                      <svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
-                          fill="#FFB23E"></path>
-                      </svg>
-                    </span>
-                  </div>
-
-                  <div class="text pl-1">
-                    <p>4.7(2.5K)</p>
-                  </div>
-                </div>
-
-              </div>
-
-              <div class="popular-inner-box">
-                <div class="Menu-List-text">
-                  <h3>Fish Tacos Chipotle Crema</h3>
-                </div>
-
-                <div class="popular-inner-item">
-
-
-                  <div class="text">
-                    <h5>Healthy tacos are possible! Yogurt chipotle crema and pickled onions make this easy Fish Taco
-                      recipe a repeat. All that in 30 minutes!</h5>
-                  </div>
-                </div>
-
-
-              </div>
-
-
-            </div>
-          </div>
-        </label>
-      </div>
-      <div class="next-btn px-5 py-3">
-        <a href="#" class="Bhagona-Btn float-end">Continue <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-      </div>
-    </div>
-</section>
   </div>
   </div>
 
